Работа над ошибками: поправлено по валидатору

--- a/catalog.html
+++ b/catalog.html
@@ -28,16 +28,16 @@
       </div>
       <div class="container">
         <div class="header-info-grid">
-          <section class="main-header-about">
+          <div class="main-header-about">
             <p class="main-header-about-text">Интернет-магазин<br>
               строительных материалов<br>
               и инструментов для ремонта</p>
-          </section>
-          <section class="main-header-contacts">
+          </div>
+          <div class="main-header-contacts">
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p class="main-header-contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          </section>
-          <section class="main-header-account">
+          </div>
+          <div class="main-header-account">
             <div class="profile-container">
               <div class="user-container">
                 <a class="username-link" href="blank.html">
@@ -59,7 +59,7 @@
                 <li class="profile-link-item"><a href="blank.html">Личный кабинет</a></li>
               </ul>
             </div>
-          </section>
+          </div>
         </div>
       </div>
       <nav class="main-navigation container">
@@ -124,11 +124,11 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
             <li class="catalog-item">
               <p class="tag-new visually-hidden"></p>
@@ -142,11 +142,11 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
             <li class="catalog-item">
               <p class="tag-new">new</p>
@@ -160,11 +160,11 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
             <li class="catalog-item">
               <p class="tag-new">new</p>
@@ -178,11 +178,11 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
             <li class="catalog-item">
               <p class="tag-new visually-hidden"></p>
@@ -196,11 +196,11 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
             <li class="catalog-item">
               <p class="tag-new">new</p>
@@ -214,11 +214,11 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
             <li class="catalog-item">
               <p class="tag-new">new</p>
@@ -232,11 +232,11 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
             <li class="catalog-item">
               <p class="tag-new visually-hidden"></p>
@@ -250,11 +250,11 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
             <li class="catalog-item">
               <p class="tag-new">new</p>
@@ -268,12 +268,13 @@
                 </p>
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
+                <figcaption class="catalog-item-options">
+                  <a class="option-buy" href="blank.html">Купить</a>
+                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                </figcaption>
               </figure>
-              <figcaption class="catalog-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
-              </figcaption>
             </li>
+          </ul>
           <ul class="pagination-list">
             <li class="pagination-item pagination-item-current">
               <a>1</a>
@@ -303,7 +304,7 @@
     <footer class="page-footer main-footer">
       <div class="footer-info-container">
         <div class="footer-info-grid container">
-          <section class="footer-contacts">
+          <div class="footer-contacts">
             <a class="main-footer-logo" href="index.html">
               <img class="main-footer-logo-img" src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
             </a>
@@ -311,8 +312,8 @@
               г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
               <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </p>
-          </section>
-          <section class="footer-navigation">
+          </div>
+          <div class="footer-navigation">
             <ul class="footer-navigation-links">
               <li><a href="blank.html">Компания</a></li>
               <li><a href="blank.html">Новости</a></li>
@@ -320,24 +321,24 @@
               <li><a href="blank.html">Доставка</a></li>
               <li><a href="blank.html">Контакты</a></li>
             </ul>
-          </section>
-          <section class="footer-promo">
+          </div>
+          <div class="footer-promo">
             <ul class="footer-promo-links">
               <li><a href="blank.html">Материалы</a></li>
               <li><a href="blank.html">Техника</a></li>
               <li><a href="blank.html">Инструмент</a></li>
               <li><a href="blank.html">Спецпредложения</a></li>
             </ul>
-          </section>
+          </div>
         </div>
       </div>
       <div class="footer-copyright-container">
         <div class="footer-copyright-grid container">
-          <section class="footer-copyright">
+          <div class="footer-copyright">
             <p class="footer-copyright-info">© 2010–2019 Компания «Техномарт»<br>
               Все права защищены</p>
-          </section>
-          <section class="footer-social">
+          </div>
+          <div class="footer-social">
             <ul>
               <li>
                 <a class="social-button social-button-vk" href="#" aria-label="ВКонтакте"></a>
@@ -349,7 +350,7 @@
                 <a class="social-button social-button-insta" href="#" aria-label="Инстаграм"></a>
               </li>
             </ul>
-          </section>
+          </div>
           <p class="footer-feedback">
             Обратная связь:
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
