--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
       </div>
       <div class="container">
         <div class="header-info-grid">
-          <section class="main-header-about">
+          <div class="main-header-about">
             <p class="main-header-about-text">Интернет-магазин<br>
               строительных материалов<br>
               и инструментов для ремонта</p>
-          </section>
-          <section class="main-header-contacts">
+          </div>
+          <div class="main-header-contacts">
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p class="main-header-contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          </section>
-          <section class="main-header-account">
+          </div>
+          <div class="main-header-account">
             <div class="authorization-container">
               <a class="login-link" href="blank.html">Войти</a>
               <svg class="login-link-icon" width="21" height="17" viewBox="0 0 21 17">
@@ -46,7 +46,7 @@
               </svg>
               <a class="register-link" href="blank.html">Регистрация</a>
             </div>
-          </section>
+          </div>
         </div>
       </div>
       <nav class="main-navigation container">
@@ -141,11 +141,11 @@
               </p>
               <p class="popular-item-price popular-item-old-price">32500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
+              <figcaption class="popular-item-options">
+                <a class="option-buy" href="blank.html">Купить</a>
+                <a class="option-bookmark" href="blank.html">В закладки</a>
+              </figcaption>
             </figure>
-            <figcaption class="popular-item-options">
-              <a class="option-buy" href="blank.html">Купить</a>
-              <a class="option-bookmark" href="blank.html">В закладки</a>
-            </figcaption>
           </li>
           <li class="popular-item">
             <p class="tag-new">new</p>
@@ -159,11 +159,11 @@
               </p>
               <p class="popular-item-price popular-item-old-price">22500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">15500 Р.</a>
+              <figcaption class="popular-item-options">
+                <a class="option-buy" href="blank.html">Купить</a>
+                <a class="option-bookmark" href="blank.html">В закладки</a>
+              </figcaption>
             </figure>
-            <figcaption class="popular-item-options">
-              <a class="option-buy" href="blank.html">Купить</a>
-              <a class="option-bookmark" href="blank.html">В закладки</a>
-            </figcaption>
           </li>
           <li class="popular-item">
             <p class="tag-new visually-hidden"></p>
@@ -177,11 +177,11 @@
               </p>
               <p class="popular-item-price popular-item-old-price">30500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
+              <figcaption class="popular-item-options">
+                <a class="option-buy" href="blank.html">Купить</a>
+                <a class="option-bookmark" href="blank.html">В закладки</a>
+              </figcaption>
             </figure>
-            <figcaption class="popular-item-options">
-              <a class="option-buy" href="blank.html">Купить</a>
-              <a class="option-bookmark" href="blank.html">В закладки</a>
-            </figcaption>
           </li>
           <li class="popular-item">
             <p class="tag-new">new</p>
@@ -195,11 +195,11 @@
               </p>
               <p class="popular-item-price popular-item-old-price"></p>
               <a class="popular-item-price popular-item-button" href="blank.html">12500 Р.</a>
+              <figcaption class="popular-item-options">
+                <a class="option-buy" href="blank.html">Купить</a>
+                <a class="option-bookmark" href="blank.html">В закладки</a>
+              </figcaption>
             </figure>
-            <figcaption class="popular-item-options">
-              <a class="option-buy" href="blank.html">Купить</a>
-              <a class="option-bookmark" href="blank.html">В закладки</a>
-            </figcaption>
           </li>
         </ul>
       </section>
@@ -319,7 +319,7 @@
     <footer class="page-footer main-footer">
       <div class="footer-info-container">
         <div class="footer-info-grid container">
-          <section class="footer-contacts">
+          <div class="footer-contacts">
             <a class="main-footer-logo">
               <img class="main-footer-logo-img" src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
             </a>
@@ -327,8 +327,8 @@
               г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
               <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </p>
-          </section>
-          <section class="footer-navigation">
+          </div>
+          <div class="footer-navigation">
             <ul class="footer-navigation-links">
               <li><a href="blank.html">Компания</a></li>
               <li><a href="blank.html">Новости</a></li>
@@ -336,24 +336,24 @@
               <li><a href="blank.html">Доставка</a></li>
               <li><a href="blank.html">Контакты</a></li>
             </ul>
-          </section>
-          <section class="footer-promo">
+          </div>
+          <div class="footer-promo">
             <ul class="footer-promo-links">
               <li><a href="blank.html">Материалы</a></li>
               <li><a href="blank.html">Техника</a></li>
               <li><a href="blank.html">Инструмент</a></li>
               <li><a href="blank.html">Спецпредложения</a></li>
             </ul>
-          </section>
+          </div>
         </div>
       </div>
       <div class="footer-copyright-container">
         <div class="footer-copyright-grid container">
-          <section class="footer-copyright">
+          <div class="footer-copyright">
             <p class="footer-copyright-info">© 2010–2019 Компания «Техномарт»<br>
               Все права защищены</p>
-          </section>
-          <section class="footer-social">
+          </div>
+          <div class="footer-social">
             <ul>
               <li>
                 <a class="social-button social-button-vk" href="#" aria-label="ВКонтакте"></a>
@@ -365,7 +365,7 @@
                 <a class="social-button social-button-insta" href="#" aria-label="Инстаграм"></a>
               </li>
             </ul>
-          </section>
+          </div>
           <p class="footer-feedback">
             Обратная связь:
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
