Подготовлено модальное окно с добавлением товара в корзину

--- a/catalog.html
+++ b/catalog.html
@@ -362,5 +362,14 @@
         </div>
       </div>
     </footer>
+    <div class="modal modal-cart">
+      <p class="modal-cart-message">Товар добавлен в корзину!</p>
+      <div class="modal-button-container">
+        <button class="button button-place-order" type="submit">Оформить заказ</button>
+        <button class="button button-continue" type="submit">Продолжить покупки</button>
+      </div>
+      </form>
+      <button class="modal-close" type="button" aria-label="Закрыть"></button>
+    </div>
   </body>
 </html>
