Ссылки при наведении на карточки товаров заменены на кнопки, внесены небольшие правки на случай переполнения контентом

--- a/catalog.html
+++ b/catalog.html
@@ -125,8 +125,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -143,8 +143,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -161,8 +161,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -179,8 +179,8 @@
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -197,8 +197,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -215,8 +215,8 @@
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -233,8 +233,8 @@
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -251,8 +251,8 @@
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -269,8 +269,8 @@
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <a class="option-buy" href="blank.html">Купить</a>
-                  <a class="option-bookmark" href="blank.html">В закладки</a>
+                  <button class="option-buy" type="button">Купить</button>
+                  <button class="option-bookmark" type="button">В закладки</button>
                 </figcaption>
               </figure>
             </li>
