--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
               <p class="popular-item-price popular-item-old-price">32500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
               <figcaption class="popular-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
+                <button class="option-buy" type="button">Купить</button>
+                <button class="option-bookmark" type="button">В закладки</button>
               </figcaption>
             </figure>
           </li>
@@ -160,8 +160,8 @@
               <p class="popular-item-price popular-item-old-price">22500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">15500 Р.</a>
               <figcaption class="popular-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
+                <button class="option-buy" type="button">Купить</button>
+                <button class="option-bookmark" type="button">В закладки</button>
               </figcaption>
             </figure>
           </li>
@@ -178,8 +178,8 @@
               <p class="popular-item-price popular-item-old-price">30500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
               <figcaption class="popular-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
+                <button class="option-buy" type="button">Купить</button>
+                <button class="option-bookmark" type="button">В закладки</button>
               </figcaption>
             </figure>
           </li>
@@ -196,8 +196,8 @@
               <p class="popular-item-price popular-item-old-price"></p>
               <a class="popular-item-price popular-item-button" href="blank.html">12500 Р.</a>
               <figcaption class="popular-item-options">
-                <a class="option-buy" href="blank.html">Купить</a>
-                <a class="option-bookmark" href="blank.html">В закладки</a>
+                <button class="option-buy" type="button">Купить</button>
+                <button class="option-bookmark" type="button">В закладки</button>
               </figcaption>
             </figure>
           </li>
