--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="search-form">
             <label class="visually-hidden" for="search-field">Поиск товаров</label>
             <input class="search-form-input" type="search" name="search" id="search-field" placeholder="Поиск:">
-            <svg class="search-form-icon" width="17" height="17" viewBox="0 0 17 17">
+            <svg aria-hidden="true" class="search-form-icon" width="17" height="17" viewBox="0 0 17 17">
               <path d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
             </svg>
           </div>
@@ -41,7 +41,7 @@
           <div class="main-header-account">
             <div class="authorization-container">
               <a class="login-link" href="blank.html">Войти</a>
-              <svg class="login-link-icon" width="21" height="17" viewBox="0 0 21 17">
+              <svg aria-hidden="true" class="login-link-icon" width="21" height="17" viewBox="0 0 21 17">
                 <path d="M14.875 8.5L6 0V6H0V11H6V17L14.875 8.5Z" fill="#C5C5C5"/>
                 <path d="M16.986 15.01H11.959V17H16.986C19.164 17 19.99 15.19 20.015 13.974V3.028C19.99 1.811 19.164 0 16.986 0H11.959V1.99H16.986C17.825 1.99 17.978 2.671 17.996 3.047V13.951C17.979 14.327 17.825 15.01 16.986 15.01Z" fill="#C5C5C5"/>
               </svg>
@@ -293,7 +293,7 @@
         </div>
       </section>
       <div class="index-columns container">
-        <section class="about column">
+        <section class="about">
           <h2>Компания «Техномарт»</h2>
           <p class="about-company">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
           <p class="about-shipping">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
@@ -304,7 +304,7 @@
           </ul>
           <a class="button about-button" href="blank.html">Подробнее о компании</a>
         </section>
-        <section class="contacts column">
+        <section class="contacts">
           <h2>Контакты</h2>
           <p class="contacts-info">Вы можете забрать товар сами,<br>
             заехав в наш офис:</p>
