--- a/catalog.html
+++ b/catalog.html
@@ -121,7 +121,7 @@
                   <span class="catalog-item-model">BFG 6000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
@@ -139,7 +139,7 @@
                   <span class="catalog-item-model">BFG 6000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
@@ -157,7 +157,7 @@
                   <span class="catalog-item-model">BFG 6000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
@@ -175,7 +175,7 @@
                   <span class="catalog-item-model">BFG 3000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
@@ -193,7 +193,7 @@
                   <span class="catalog-item-model">BFG 6000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
@@ -211,7 +211,7 @@
                   <span class="catalog-item-model">BFG 2000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                  <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
@@ -229,7 +229,7 @@
                   <span class="catalog-item-model">BFG 3000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                  <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
@@ -247,7 +247,7 @@
                   <span class="catalog-item-model">BFG 6000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                  <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
@@ -265,7 +265,7 @@
                   <span class="catalog-item-model">BFG 2000</span>
                 </h3>
                 <p class="catalog-item-image">
-                  <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                  <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price"></p>
                 <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
