--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <span class="popular-item-model">BFG 9000</span>
               </h3>
               <p class="popular-item-image">
-                <img src="img/item-bosch-bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+                <img src="img/item-bosch-bfg9000.png" width="184" height="164" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">32500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
@@ -158,7 +158,7 @@
                 <span class="popular-item-model">BFG 3000</span>
               </h3>
               <p class="popular-item-image">
-                <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">22500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">15500 Р.</a>
@@ -176,7 +176,7 @@
                 <span class="popular-item-model">BFG 6000</span>
               </h3>
               <p class="popular-item-image">
-                <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">30500 Р.</p>
               <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
@@ -194,7 +194,7 @@
                 <span class="popular-item-model">BFG 2000</span>
               </h3>
               <p class="popular-item-image">
-                <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price"></p>
               <a class="popular-item-price popular-item-button" href="blank.html">12500 Р.</a>
