Улучшена доступность кнопок

--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
           <li class="offer-item offer-item-materials">
             <p class="tag-new">new</p>
             <h3 class="offer-item-title">Материалы</h3>
-            <a class="offer-item-button" href="blank.html">На любой вкус</a>
+            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу с Материалами">На любой вкус</a>
           </li>
           <li class="offer-item offer-item-tool">
             <p class="tag-new visually-hidden"></p>
             <h3 class="offer-item-title">Инструмент</h3>
-            <a class="offer-item-button" href="blank.html">На все случаи</a>
+            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу с Инструментом">На все случаи</a>
           </li>
           <li class="offer-item offer-item-equipment">
             <p class="tag-new visually-hidden"></p>
             <h3 class="offer-item-title">Техника</h3>
-            <a class="offer-item-button" href="blank.html">Для стройки</a>
+            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу с Техникой">Для стройки</a>
           </li>
           <li class="offer-item offer-item-discount">
             <p class="tag-new visually-hidden"></p>
             <h3 class="offer-item-title">Скидка 50%</h3>
-            <a class="offer-item-button" href="blank.html">На 350 товаров</a>
+            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу Товаров со скидкой">На 350 товаров</a>
           </li>
           <li class="offer-item offer-item-delivery">
             <p class="tag-new visually-hidden"></p>
             <h3 class="offer-item-title">Доставка</h3>
-            <a class="offer-item-button" href="blank.html">Бесплатно</a>
+            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу с Услугами доставки">Бесплатно</a>
           </li>
           <li class="offers-slider">
             <div class="offers-slider-content">
@@ -143,10 +143,10 @@
                 <img src="img/item-bosch-bfg9000.png" width="184" height="164" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">32500 Р.</p>
-              <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
+              <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 9000»">25500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button">Купить</button>
-                <button class="option-bookmark" type="button">В закладки</button>
+                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 9000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 9000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
@@ -161,10 +161,10 @@
                 <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">22500 Р.</p>
-              <a class="popular-item-price popular-item-button" href="blank.html">15500 Р.</a>
+              <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button">Купить</button>
-                <button class="option-bookmark" type="button">В закладки</button>
+                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
@@ -179,10 +179,10 @@
                 <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">30500 Р.</p>
-              <a class="popular-item-price popular-item-button" href="blank.html">25500 Р.</a>
+              <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button">Купить</button>
-                <button class="option-bookmark" type="button">В закладки</button>
+                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
@@ -197,10 +197,10 @@
                 <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price"></p>
-              <a class="popular-item-price popular-item-button" href="blank.html">12500 Р.</a>
+              <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
               <figcaption class="popular-item-options">
-                <button class="option-buy" type="button">Купить</button>
-                <button class="option-bookmark" type="button">В закладки</button>
+                <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
               </figcaption>
             </figure>
           </li>
