--- a/catalog.html
+++ b/catalog.html
@@ -124,10 +124,10 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -142,10 +142,10 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -160,10 +160,10 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -178,10 +178,10 @@
                   <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -196,10 +196,10 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -214,10 +214,10 @@
                   <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price"></p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -232,10 +232,10 @@
                   <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">15500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -250,10 +250,10 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
@@ -268,10 +268,10 @@
                   <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price"></p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html">12500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
                 <figcaption class="catalog-item-options">
-                  <button class="option-buy" type="button">Купить</button>
-                  <button class="option-bookmark" type="button">В закладки</button>
+                  <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
+                  <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
                 </figcaption>
               </figure>
             </li>
